refactor(modernization): 升級 Java 21 新特性、修復 Qodana 快取與代碼質量問題並統一文檔規範