@@ -9,7 +9,6 @@ import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class CustomUserDetails implements UserDetails {
 
@@ -32,7 +31,7 @@ public class CustomUserDetails implements UserDetails {
         return user.getRoles().stream()
                 .map(UserRole::getRole)
                 .map(role -> new SimpleGrantedAuthority("ROLE_" + role.getName().toUpperCase()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
